<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/xxx"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="0dp"
    android:visibility="visible" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/padel01" />

        <RelativeLayout
            android:id="@+id/frameLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp" >

            <TextView
                android:id="@+id/TextViewJugador1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/jugador"
                android:textColor="#333333"
                android:textSize="25sp"
                app:context=".TestActivity" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frameLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp" >
        </RelativeLayout>

        <TextView
            android:id="@+id/TextViewugador2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:text="@string/area"
            android:textColor="#333333"
            android:textSize="25sp"
            app:context=".TestActivity" />

        <TextView
            android:id="@+id/TextViewHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/confirma4"
            android:textColor="#333333"
            android:textSize="20sp"
            app:context=".TestActivity" />

    </RelativeLayout>

 </FrameLayout>